--- a/Libs/AspieTech.Kernel/AspieTech.LocalizationHandler/i18nResources/AspieTech.Kernel.fr.resx
+++ b/Libs/AspieTech.Kernel/AspieTech.LocalizationHandler/i18nResources/AspieTech.Kernel.fr.resx
@@ -117,4 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="SEx1HI324MZLC" xml:space="preserve">
+    <value>La variable de type T fournit doit être une retsource utilitaire pour le module linguistique.</value>
+  </data>
+  <data name="SExX4J4OSAG2G" xml:space="preserve">
+    <value>Le type T fournit doit être un Enum.</value>
+  </data>
 </root>
