Stabilisation de la fonctionnalité de génération de fichier de ressource sérialisé

--- a/Libs/AspieTech.Kernel/AspieTech.Builder/Resources/AspieTech.Builder.en.resx
+++ b/Libs/AspieTech.Kernel/AspieTech.Builder/Resources/AspieTech.Builder.en.resx
@@ -120,4 +120,7 @@
   <data name="azerty" xml:space="preserve">
     <value>ooooo</value>
   </data>
+  <data name="ytreza" xml:space="preserve">
+    <value>dddd</value>
+  </data>
 </root>
