--- a/Libs/AspieTech.Kernel/AspieTech.Builder/Resources/AspieTech.Builder.fr.resx
+++ b/Libs/AspieTech.Kernel/AspieTech.Builder/Resources/AspieTech.Builder.fr.resx
@@ -120,4 +120,7 @@
   <data name="azerty" xml:space="preserve">
     <value>uuuuu</value>
   </data>
+  <data name="ytreza" xml:space="preserve">
+    <value>mmmm</value>
+  </data>
 </root>
